<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:gravity="center_vertical|center_horizontal"
              tools:context="com.bargainhunter.bargainhunterandroid.ui.activities.LoginActivity">

    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Welcome to SightSeeker!!!"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Enter your e-mail and password, to gain access to our platform"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp" />

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <AutoCompleteTextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
        android:editable="true"
        android:singleLine="true" />

    <EditText
            android:id="@+id/passkey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"  android:hint="@string/hint_password"
        android:editable="true"
        android:singleLine="true" />

    <Button
            android:id="@+id/login_btn"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:text="@string/login"
            android:layout_gravity="center_horizontal" android:clickable="true"
            android:enabled="true" android:textColor="#ff000000"/>

        <Button
                android:id="@+id/register_btn"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:onClick="register"
                android:text="@string/register"
                android:layout_gravity="center_horizontal" android:clickable="true"
                android:enabled="true" android:textColor="#ff000000"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>