<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.recommender.sightseeing.sightseeking.ui.activities.RegisterActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerProgressBar" android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" android:visibility="gone"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerForm"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="textEmailAddress" android:ems="10" android:id="@+id/emailEditText"
            android:layout_below="@+id/lastNameEditText" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignRight="@+id/lastNameEditText"
            android:layout_alignEnd="@+id/lastNameEditText" android:hint="@string/hint_email"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="textPassword" android:ems="10" android:id="@+id/passwordEditText"
            android:layout_below="@+id/usernameEditText" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignRight="@+id/usernameEditText"
            android:layout_alignEnd="@+id/usernameEditText" android:hint="@string/hint_password"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="textPassword" android:ems="10" android:id="@+id/re_passwordEditText"
            android:layout_below="@+id/usernameEditText" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_alignRight="@+id/usernameEditText"
            android:layout_alignEnd="@+id/usernameEditText" android:hint="@string/hint_re_password"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="User Registration"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Create your own account, to rate places that you visit and get recommendations for places near you!!!"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_marginTop="26dp"
        android:textAlignment="textEnd"
        android:gravity="center_horizontal"
        android:layout_above="@+id/registerForm" />

    <Button android:layout_width="193dp" android:layout_height="wrap_content"
        android:text="@string/register" android:id="@+id/createAccountButton"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/registerForm"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
